--- a/principal.html
+++ b/principal.html
@@ -15,6 +15,7 @@
     <link href="assets/css/custom.css" rel="stylesheet" />
      <!-- GOOGLE FONTS-->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+   <script src="assets/js/comunicacaoWebService.js"></script>
   
    
 </head>
@@ -110,6 +111,7 @@ font-size: 16px;"> </div>
 								<p class="text-muted">Dados pessoais</p>
 						 </div>
 					 </div>
+					 <button type="button" class="btn btn-primary" style="width: 100%;border: none; background: #ff9900;" onclick="logout()">SAIR</button>
 					
 				</div>
 					 
