--- a/perfil.html
+++ b/perfil.html
@@ -80,7 +80,7 @@
 				</div>
 				<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 				  <div class="panel-body">
-					<a href="">Alterar dados pessoais</a><br />
+					<a href="atualizarUsuario.html" >Atualizar Dados</a><br />
 					<a href="">Excluir conta</a>
 				  </div>
 				</div>
