--- a/estabelecimento.html
+++ b/estabelecimento.html
@@ -15,6 +15,12 @@
     <link href="assets/css/custom.css" rel="stylesheet" />
      <!-- GOOGLE FONTS-->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+   	<script src="assets/js/comunicacaoWebService.js"></script>
+	<script type="text/javascript">
+		window.onload = function(){
+			verificarLogin("estabelecimento");
+		}
+	</script>  
   
    
 </head>
