--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
      <!-- GOOGLE FONTS-->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
    <script src="assets/js/comunicacaoWebService.js"></script>
-	<script type="text/javascript">
+   	<script type="text/javascript">
 		window.onload = function(){
-			verificarLogin();
+			verificarLogin("index");
 		}
-	</script>   
+	</script>  
 </head>
 <body>
     <div id="wrapper">
