--- a/produtos.html
+++ b/produtos.html
@@ -14,9 +14,13 @@
         <!-- CUSTOM STYLES-->
     <link href="assets/css/custom.css" rel="stylesheet" />
      <!-- GOOGLE FONTS-->
-   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
-  
-   
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+	<script src="assets/js/comunicacaoWebService.js"></script>
+	<script type="text/javascript">
+		window.onload = function(){
+			verificarLogin("produtos");
+		}
+	</script>  
 </head>
 <body>
     <div id="wrapper">
