--- a/atualizarUsuario.html
+++ b/atualizarUsuario.html
@@ -13,9 +13,9 @@
      <!-- GOOGLE FONTS-->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
    <script src="assets/js/comunicacaoWebService.js"></script>
-	<script type="text/javascript">
+   <script type="text/javascript">
 		window.onload = function(){
-			verificarLogin("atualizaUsuario");
+			verificarLogin("atualizarUsuario");
 		}
 	</script>  
 </head>
