--- a/listas.html
+++ b/listas.html
@@ -82,6 +82,7 @@
 								<h4 class="panel-title">
 									<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: #ffb503;">
 										<img src="assets/img/detalhes.png" width="30px" style="margin-bottom: 3px;color: #ffb503;">
+										<img src="assets/img/lista.png" width="30px" style="margin-bottom: 3px;color: #ffb503;">
 										<p id="nomeLista"></p>
 									</a>
 								</h4>
