--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -38,7 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <h2 style="padding:0px 0px 10px 10px;color:#fff;"><a href="principal.html"><img src="assets/img/voltar.png" width="40px"></a></h2> 
+                <h2 style="padding:0px 0px 10px 10px;color:#fff;"><a href="listas.html"><img src="assets/img/voltar.png" width="40px"></a></h2> 
             </div>
 				
 			<div id="dataAtual" style="color: white; padding: 15px; float: right; font-size: 16px;"> </div>
@@ -138,7 +138,7 @@
 		<div class="modal-content">
 		  <div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-			<h4 class="modal-title" id="myModalLabel">Adicionar popduto à lista</h4>
+			<h4 class="modal-title" id="myModalLabel">Adicionar produto à lista</h4>
 		  </div>
 		  <div class="modal-body">
 			
@@ -178,7 +178,9 @@
 		  </div>
 		  <div class="modal-footer">
 			<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-			<button type="button" class="btn btn-primary" onclick="javascript:adicionarProdutoALista();">Cadastrar produto</button>
+			<button type="button" class="btn btn-primary" onclick="adicionarProdutoALista();">Cadastrar produto</button>
+			<button type="button" class="btn btn-primary" onclick="excluirLista();">Excluir Lista</button>
+			<button type="button" class="btn btn-primary" onclick="editarNomeLista();">Editar  Nome da lista</button>
 		  </div>
 		</div>
 	  </div>
