--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -146,7 +146,7 @@
 				  <div class="form-group" style="margin-bottom: 0px;">
 					<label for="inputEmail3" class="col-sm-2 control-label">Código de barras:</label>
 					<div class="col-sm-10">
-					  <input class="form-control" type="text" placeholder="Código de barras" id="cod_barra" name="cod_barra" readonly>
+					  <input class="form-control" type="text" placeholder="Código de barras" id="cod_barra" name="cod_barra" value='' readonly>
 					  <p style="margin: 0px; padding: 0px;"><a href="#" id="scan"><img src="assets/img/codigo_barras.png" width="30px" style="float: right; position: relative;bottom: 70px;"></a></p>
 					</div>
 				  </div>
@@ -154,7 +154,7 @@
 				  <div class="form-group" style="margin-bottom: 20px;">
 					<label for="inputPassword3"  class="col-sm-2 control-label">Formato:</label>
 					<div class="col-sm-10">
-					  <input class="form-control" type="text" placeholder="Formato" id="formato" name="formato" readonly>
+					  <input class="form-control" type="text" placeholder="Formato" id="formato" name="formato" value='' readonly>
 					</div>
 				  </div>
 				  
