--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -151,13 +151,13 @@
 					</div>
 				  </div>
 				  
-				  <div class="form-group" style="margin-bottom: 20px;">
+				  <!-- <div class="form-group" style="margin-bottom: 20px;">
 					<label for="inputPassword3"  class="col-sm-2 control-label">Formato:</label>
 					<div class="col-sm-10">
 					  <input class="form-control" type="text" placeholder="Formato" id="formato" name="formato" value='' readonly>
 					</div>
 				  </div>
-				  
+				  -->
 				  <div class="form-group">
 					<label for="nomeDoProduto" class="col-sm-2 control-label">Nome do produto:</label>
 					<div class="col-sm-10">
@@ -179,8 +179,8 @@
 		  <div class="modal-footer">
 			<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
 			<button type="button" class="btn btn-primary" onclick="adicionarProdutoALista();">Cadastrar produto</button>
-			<button type="button" class="btn btn-primary" onclick="excluirLista();">Excluir Lista</button>
-			<button type="button" class="btn btn-primary" onclick="editarNomeLista();">Editar  Nome da lista</button>
+			<!-- <button type="button" class="btn btn-primary" onclick="excluirLista();">Excluir Lista</button>
+			<button type="button" class="btn btn-primary" onclick="editarNomeLista();">Editar  Nome da lista</button> -->
 		  </div>
 		</div>
 	  </div>
