--- a/esqueceuSenha.html
+++ b/esqueceuSenha.html
@@ -13,7 +13,7 @@
      <!-- GOOGLE FONTS-->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
    
-    <script src="assets/js/comunicacaoWebService.js"></script>  
+    <script src="assets/js/usuarioWS.js"></script>   
 </head>
 <body>
     <div id="wrapper">
