--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <script src="http://code.jquery.com/jquery-1.9.1.js"></script> 
    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
-   <script src="assets/js/comunicacaoWebService.js"></script>   
+   <script src="assets/js/usuarioWS.js"></script>  
 	<script type="text/javascript">
 		window.onload = function(){
 			verificarLogin("index");
