--- a/listas.html
+++ b/listas.html
@@ -16,7 +16,8 @@
      <!-- GOOGLE FONTS-->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
    
-   <script src="assets/js/comunicacaoWebService.js"></script>
+   <script src="assets/js/listaWS.js"></script>
+   <script src="assets/js/usuarioWS.js"></script>  
    
    	<script type="text/javascript">
 		window.onload = function(){
