--- a/principal.html
+++ b/principal.html
@@ -15,7 +15,7 @@
     <link href="assets/css/custom.css" rel="stylesheet" />
      <!-- GOOGLE FONTS-->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
-   <script src="assets/js/comunicacaoWebService.js"></script>   
+	<script src="assets/js/usuarioWS.js"></script>  
 	<script type="text/javascript">
 		window.onload = function(){
 			verificarLogin("principal");
