--- a/listas.html
+++ b/listas.html
@@ -238,6 +238,11 @@
 	  </div>
 	</div>
    <!-- Modal para editar lista final -->
+    <!-- JQUERY SCRIPTS -->
+    <script src="assets/js/jquery-1.10.2.js"></script>
+	 <!-- METISMENU SCRIPTS -->
+    <script src="assets/js/jquery.metisMenu.js"></script>
+	
 	<script type="text/javascript" src="cordova.js"></script>
 	<script type="text/javascript" src="barcodescanner.js"></script>
 	<script type="text/javascript" src="assets/js/index.js"></script> 
