--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -76,6 +76,7 @@
 			<div id="page-wrapper" >
 				<div id="page-inner">
 					<div class="row">
+						<h2 id="tituloLista"></h2>	
 						<h2 id="nomeDaLista" style="color: #000; font-size: 18px; font-weight: bold; padding: 0px 0px 12px 15px;"></h2>
 						
 						<p id="nomeLista" style="margin-left:15px">
