--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -171,7 +171,7 @@
 				  <div class="form-group">
 					<label for="nomeDoProduto" class="col-sm-2 control-label">Nome do produto:</label>
 					<div class="col-sm-10">
-					<input type="text" class="form-control" placeholder="Nome do produto" id="nomeDoProduto" name="nomeDoProduto" onkeyup="teste()" />
+					<input type="text" class="form-control" placeholder="Nome do produto" id="nomeDoProduto" name="nomeDoProduto" onkeyup="autoComplete()" />
 					</div>
 				  </div>
 				  
