--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -79,8 +79,8 @@
 						<h2 id="tituloLista"></h2>	
 						<h2 id="nomeDaLista" style="color: #000; font-size: 18px; font-weight: bold; padding: 0px 0px 12px 15px;"></h2>
 						
-						<p id="nomeLista" style="margin-left:15px">
-						</p>
+						
+						<p id="nomeLista" style="margin-left:15px"></p>
 
 						<button type="button" class="btn btn-primary" style="float: right;" data-toggle="modal" data-target="#cadastrar_prduto_lista" onclick="javascript:adicionarProdutoALista();">
 							Cadastrar produto à lista
