Alterações na função de pesquisar produtos

--- a/produtos.html
+++ b/produtos.html
@@ -112,12 +112,14 @@
 					<div class="col-sm-10">
 						 <select name="embalagem" class="form-control">
 						  <option value="0">Todas</option>
-						  <option value="1">Unidade</option>
-						  <option value="2">Caixa</option>
-						  <option value="3">Garrafa</option>
-						  <option value="4">Lata</option>
-						  <option value="5">Barra</option>
-						  <option value="6">Peso</option>
+						  <option value="1">Outra</option>
+						  <option value="2">Unidade</option>
+						  <option value="7">Barra</option>
+						  <option value="4">Caixa</option>
+						  <option value="5">Garrafa</option>
+						  <option value="6">Lata</option>
+						  <option value="3">Pacote</option>
+						  <option value="8">Peso</option>
 						</select>
 					</div>
 				  </div>
