--- a/procurarProdutosLista.html
+++ b/procurarProdutosLista.html
@@ -196,6 +196,70 @@
 			</div>
 		</div>
 		<!-- Modal final -->
+		<!-- Editar Produto -->
+		<div class="modal fade" id="editar_produto" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+						<h4 class="modal-title" id="myModalLabel">Editar produto</h4>
+					</div>
+					<div class="modal-body">			
+						<form class="form-horizontal" role="form">
+							<div class="form-group" style="margin-bottom: 0px;">
+								<label for="inputEmail3" class="col-sm-2 control-label">Código de barras:</label>
+								<div class="col-sm-10">
+									<input class="form-control" type="text" placeholder="Código de barras" id="cod_barraEditado" name="cod_barraEditado" value='' readonly />
+									<p style="margin: 0px; padding: 0px;"><a href="#" id="scan"><img src="assets/img/codigo_barras.png" width="30px" style="float: right; position: relative;bottom: 70px;"></a></p>
+								</div>
+							</div>				  
+							<!-- <div class="form-group" style="margin-bottom: 20px;">
+								<label for="inputPassword3"  class="col-sm-2 control-label">Formato:</label>
+								<div class="col-sm-10">
+									<input class="form-control" type="text" placeholder="Formato" id="formato" name="formato" value='' readonly>
+								</div>
+							</div>
+							-->
+							<div class="form-group">
+								<label for="nomeDoProdutoEditado" class="col-sm-2 control-label">Nome do produto:</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" placeholder="Nome do produto" id="nomeDoProdutoEditado" name="nomeDoProdutoEditado" onkeyup="autoComplete()" />
+								</div>
+							</div>				  
+							<div class="form-group">
+								<label for="marcaDoProdutoEditado" class="col-sm-2 control-label">Marca do produto:</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" placeholder="Marca do produto" id="marcaDoProdutoEditado" name="marcaDoProdutoEditado" onkeyup="autoComplete()" />
+								</div>
+							</div>				  
+							<div class="form-group">
+								<label for="embalagemDoProdutoEditado" class="col-sm-2 control-label">Embalagem do produto:</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" placeholder="1" id="embalagemDoProdutoEditado" name="embalagemDoProdutoEditado" onkeyup="autoComplete()" />
+								</div>
+							</div>				  
+							<div class="form-group">
+								<label for="unidadeDoProdutoEditado" class="col-sm-2 control-label">Unidade do produto:</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" placeholder="1" id="unidadeDoProdutoEditado" name="unidadeDoProdutoEditado" onkeyup="autoComplete()" />
+								</div>
+							</div>				  
+							<div class="form-group">
+								<label for="quantidadeDoProdutoEditado" class="col-sm-2 control-label">Quantidade:</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" placeholder="1" id="quantidadeDoProdutoEditado" name="quantidadeDoProdutoEditado" />
+								</div>
+							</div>			  
+						</form>			
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+						<button type="button" class="btn btn-primary" onclick="editarProduto();">Editar produto</button>
+					</div>
+				</div>
+			</div>
+		</div>   
+		<!-- Modal final -->
 		<!-- /. PAGE INNER  -->
 		<!-- /. WRAPPER  -->
 		<!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
