--- a/checkin.html
+++ b/checkin.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 	
-		<meta charset="UTF-8" />
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Compras Digital</title>
 		<!-- BOOTSTRAP STYLES -->
@@ -17,13 +17,12 @@
 		<link href='assets/css/googleapis.css' rel='stylesheet' type='text/css' />
 		<!-- SCRIPTS DO COMUNICACAO WEB SERVICE -->
 		<script src="assets/js/WS/usuarioWS.js"></script> 
-		<script src="assets/js/WS/checkInWS.js"></script>
-		<script src="assets/js/WS/estabelecimentoWS.js"></script>		
+		<script src="assets/js/WS/checkInWS.js"></script>	
 		<!-- FUNCOES PRE-REALIZADAS -->
 		<script type="text/javascript">
 			window.onload = function(){
 				verificarLogin("principal");
-				retornarEstabelecimentosMaisBaratos();
+				listarEstabelecimento();
 			}
 		</script> 
 		
@@ -67,6 +66,48 @@
 			</nav>  
 			
 			<!-- conteudo -->
+			
+			<h4 class="modal-title" style="color:#428bca;font-size: 25px;margin-left: 15px;">Escolha o estabelecimento</h4>
+			<p id="nomeEstab" style="padding-top: 0px;"></p>
+		
+		
+		<!-- modal para escolher a lista -->
+		<div class="modal fade" id="escolher_lista" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Fechar</span></button>
+						<h4 class="modal-title" id="myModalLabel">Escolha uma lista</h4>
+					</div>
+					
+					<p id="nomeLista"></p>
+		
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Modal final -->
+		
+		<!-- modal para checkIn -->
+		<div class="modal fade" id="checkIn" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Fechar</span></button>
+						<h4 class="modal-title" id="myModalLabel">Selecione os produtos pro Check In</h4>
+					</div>
+					
+					<p id="produtos_checkIn"></p>
+		
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Modal final -->
 			
 			
 			<!--  -->
