--- a/checkin.html
+++ b/checkin.html
@@ -64,12 +64,21 @@
 					</ul>
 				</div>
 			</nav>  
+			<!-- /. NAV SIDE  -->
+				<div id="page-wrapper" >
+					<div id="page-inner">					  
+						<div class="row">
+							<h4 class="modal-title" style="color:#428bca;font-size: 25px;margin-left: 15px;">Escolha o estabelecimento</h4>
+							<p id="nomeEstab"></p>
+						</div>             
+					</div>           
+				</div>
+				<!-- /. PAGE INNER  -->
 			
 			<!-- conteudo -->
 			
-			<h4 class="modal-title" style="color:#428bca;font-size: 25px;margin-left: 15px;">Escolha o estabelecimento</h4>
-			<p id="nomeEstab" style="padding-top: 0px;"></p>
 		
+		</div>
 		
 		<!-- modal para escolher a lista -->
 		<div class="modal fade" id="escolher_lista" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -111,7 +120,6 @@
 			
 			
 			<!--  -->
-		</div>
 		<!-- /. WRAPPER  -->
 		<!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
 		<!-- JQUERY SCRIPTS -->
