--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -78,7 +78,7 @@
 							<button type="button" class="btn btn-primary" style="float: right;" data-toggle="modal" data-target="#exibir_estabelecimento" onclick="retornarEstabelecimentosMaisBaratos()">
 								Buscar ofertas
 							</button>
-							<button type="button" class="btn btn-primary" style="float: right;" data-toggle="modal" data-target="#cadastrar_prduto_lista" onclick="javascript:criarProduto();">
+							<button type="button" class="btn btn-primary" style="float: right;" data-toggle="modal" data-target="#cadastrar_prduto_lista" >
 								Cadastrar produto à lista
 							</button>						
 							<a href="procurarProdutosLista.html">Produtos</a>						
@@ -87,11 +87,8 @@
 							</button>						
 							<button id="botaoLoucao" type="button" class="btn btn-primary" style="float: right; display: none;" onclick="procurarProduto();">
 								Procurar Produto
-							</button>						
-							<div class="col-sm-10">
-								<input type="text" class="form-control" placeholder="Ex: Arroz" id="teste" name="teste" style="display: none;" />
-							</div>						
-							<!--<input type="text" id="nomeDoProduto" onkeyup="teste()" />-->					
+							</button>
+							<input type="text" class="form-control" placeholder="Ex: Arroz" id="teste" name="teste" style="display: none;" />						
 						</div> 					 	
 					</div>
 				</div>           
