--- a/principal.html
+++ b/principal.html
@@ -75,7 +75,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-6">           
 							<div class="panel panel-back noti-box">
 								<div>
-									<a href="estabelecimento.html"><img src="assets/img/estabelecimento.png" width="60px"></a>
+									<a href="estabelecimento.html"><img src="assets/img/estabelecimento.png" width="60px" height="90px"></a>
 								</div>							
 									<p class="main-text">Estabelecimentos</p>
 									<p class="text-muted">Supermercados cadastrados</p>							
@@ -85,7 +85,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-6">           
 							<div class="panel panel-back noti-box">
 								<div>
-									<a href="checkin.html"><img src="assets/img/checkin.png" width="60px"></a>
+									<a href="checkin.html"><img src="assets/img/checkin.png" width="60px" height="90px"></a>
 								</div>
 									<p class="main-text">CheckIn</p>
 									<p class="text-muted">Realize seu checkin</p>
@@ -95,7 +95,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-6">           
 							<div class="panel panel-back noti-box">
 								<div>
-									<a href="listas.html"><img src="assets/img/lista.png" width="60px"></a>
+									<a href="listas.html"><img src="assets/img/lista.png" width="60px" height="90px"></a>
 								</div>
 									<p class="main-text">Listas</p>
 									<p class="text-muted">Suas lista(s) de compras</p>
@@ -104,7 +104,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-6">           
 							<div class="panel panel-back noti-box">
 								<div>
-									<a href="produtos.html"><img src="assets/img/produtos.png" width="60px"></a>
+									<a href="produtos.html"><img src="assets/img/produtos.png" width="60px" height="90px"></a>
 								</div>
 									<p class="main-text">Produtos</p>
 									<p class="text-muted">Produtos cadastrados</p>
@@ -113,7 +113,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-6">           
 							<div class="panel panel-back noti-box">
 								<div>
-									<a href="perfil.html"><img src="assets/img/profile.png" width="60px"></a>
+									<a href="perfil.html"><img src="assets/img/profile.png" width="60px" height="90px"></a>
 								</div>
 									<p class="main-text">Perfil</p>
 									<p class="text-muted">Dados pessoais</p>
