--- a/procurarProdutosLista.html
+++ b/procurarProdutosLista.html
@@ -39,7 +39,9 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h2 style="padding:0px 0px 10px 10px;color:#fff;"><a href="visualizar-lista.html"><img src="assets/img/voltar.png" width="40px"></a></h2> 
+					<button onclick="voltarParaAListaAnterior();" style="height: 80px; width:50px; border:0px; background:#0308FF;">
+						<h2 style="padding:0px 0px 40px 4px;color:#fff;"><img src="assets/img/voltar.png" width="40px"></a></h2>
+					</button> 
 				</div>				
 				<div id="dataAtual" style="color: white; padding: 15px; float: right; font-size: 16px;"> </div>
 			</nav>   
