--- a/checkin.html
+++ b/checkin.html
@@ -111,6 +111,10 @@
 					<p id="produtos_checkIn"></p>
 		
 					<div class="modal-footer">
+						<div id="total"  style="float: left; margin-top: 0px;">
+						<h3>Total:</h3>
+						<h3 id="total_lista" style="margin: -34px 70px;position: absolute;">R$ 0</h3>
+						</div>
 						<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
 					</div>
 				</div>
