--- a/checkinEstabelecimento.html
+++ b/checkinEstabelecimento.html
@@ -2,7 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 	
-		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Compras Digital</title>
 		<!-- BOOTSTRAP STYLES -->
@@ -24,8 +23,7 @@
 				verificarLogin("principal");
 				listarEstabelecimento();
 			}
-		</script> 
-		
+		</script> 	
 	</head>
 	<body>
 		<div id="wrapper">
@@ -37,7 +35,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h2 style="padding:0px 0px 10px 10px;color:#fff;">Página inicial</h2> 
+					<h2 style="padding:0px 0px 10px 10px;color:#fff;"><a href="principal.html"><img src="assets/img/voltar.png" width="40px"></a></h2> 
 				</div>
 				<div id="dataAtual" style="color: white;padding: 15px;float: right;font-size: 16px;"> </div>
 			</nav>   
@@ -97,31 +95,6 @@
 			</div>
 		</div>
 		<!-- Modal final -->
-		
-		<!-- modal para checkIn -->
-		<div class="modal fade" id="checkIn" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Fechar</span></button>
-						<h4 class="modal-title" id="myModalLabel">Selecione os produtos pro Check In</h4>
-					</div>
-					
-					<p id="produtos_checkIn"></p>
-		
-					<div class="modal-footer">
-						<div id="total"  style="float: left; margin-top: 0px;">
-						<h3>Total:</h3>
-						<h3 id="total_lista" style="margin: -34px 70px;position: absolute;">R$ 0</h3>
-						</div>
-						<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Modal final -->
-			
-			
 			<!--  -->
 		<!-- /. WRAPPER  -->
 		<!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
