Checkin em Estabelecimento,Lista e Index

--- a/checkinProdutos.html
+++ b/checkinProdutos.html
@@ -35,7 +35,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h2 style="padding:0px 0px 10px 10px;color:#fff;"><a href="checkinEstabelecimento.html"><img src="assets/img/voltar.png" width="40px"></a></h2> 
+					<h2 style="padding:0px 0px 10px 10px;color:#fff;"><img src="assets/img/produtos.png" width="40px"></h2> 
 				</div>
 				<div id="dataAtual" style="color: white;padding: 15px;float: right;font-size: 16px;"> </div>
 			</nav>   
