--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -19,6 +19,7 @@
 		<script src="assets/js/WS/usuarioWS.js"></script>
 		<script src="assets/js/WS/listaWS.js"></script>
 		<script src="assets/js/WS/produtoWS.js"></script>  
+		<script src="assets/js/WS/checkinWS.js"></script>  
 		<!--FUNCOES PRE-REALIZADAS-->
 		<script type="text/javascript">
 			window.onload = function(){
@@ -79,7 +80,12 @@
 							</button>
 							<button type="button" class="btn btn-primary" style="float: right;" data-toggle="modal" data-target="#cadastrar_prduto_lista" >
 								Cadastrar produto à lista
-							</button>						
+							</button>	
+
+							<button type="button" class="btn btn-primary" style="float: right;" onclick="controleCheckin('lista')">
+								Checkin
+							</button>
+							
 							<a href="procurarProdutosLista.html">Produtos</a>						
 							<button type="button" class="btn btn-primary" style="float: right;" onclick="mostrarPesquisa();">
 								Q
