--- a/procurarProdutosLista.html
+++ b/procurarProdutosLista.html
@@ -125,6 +125,7 @@
 				</div>
 			</div>
 		</div>	
+		<!-- Modal cadastrar produto -->
 		<div class="modal fade" id="cadastrar_produto_lista" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -151,27 +152,42 @@
 							<div class="form-group">
 								<label for="nomeDoProduto" class="col-sm-2 control-label">Nome do produto:</label>
 								<div class="col-sm-10">
-									<input type="text" class="form-control" placeholder="Nome do produto" id="nomeDoProduto" name="nomeDoProduto" onkeyup="autoComplete()" />
+									<input type="text" class="form-control" placeholder="Nome do produto" id="nomeProduto" name="nomeDoProduto" onkeyup="autoComplete('1')" />
 								</div>
 							</div>				  
 							<div class="form-group">
-								<label for="quantidade" class="col-sm-2 control-label">Quantidade:</label>
+								<label for="marcaDoProduto" class="col-sm-2 control-label">Marca do produto:</label>
 								<div class="col-sm-10">
-									<input type="text" class="form-control" placeholder="1" id="quantidade" name="quantidade" />
+									<input type="text" class="form-control" placeholder="Marca do produto" id="marcaDoProduto" name="marcaDoProduto" onkeyup="autoCompleteMarca('1')" />
 								</div>
 							</div>				  
+							<div class="form-group">
+								<label for="embalagemDoProduto" class="col-sm-2 control-label">Embalagem do produto:</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" placeholder="1" id="embalagemDoProduto" name="embalagemDoProduto" onkeyup="autoComplete()" />
+								</div>
+							</div>				  
+							<div class="form-group">
+								<label for="unidadeDoProduto" class="col-sm-2 control-label">Unidade do produto:</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" placeholder="1" id="unidadeDoProduto" name="unidadeDoProduto" onkeyup="autoComplete()" />
+								</div>
+							</div>				  
+							<div class="form-group">
+								<label for="quantidadeDoProduto" class="col-sm-2 control-label">Quantidade:</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" placeholder="1" id="quantidadeDoProduto" name="quantidadeDoProduto" />
+								</div>
+							</div>			  
 						</form>			
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
 						<button type="button" class="btn btn-primary" onclick="criarProduto();">Cadastrar produto</button>
-						<!-- <button type="button" class="btn btn-primary" onclick="excluirLista();">Excluir Lista</button>
-						<button type="button" class="btn btn-primary" onclick="editarNomeLista();">Editar  Nome da lista</button> -->
 					</div>
 				</div>
 			</div>
-		</div>
-		<!-- Modal final -->	
+		</div>   
 		<!-- Modal Quantidade Pordutos -->
 		<div class="modal fade" id="adicionar_quantidade_de_produto_na_lista" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
