--- a/checkinProdutos.html
+++ b/checkinProdutos.html
@@ -84,6 +84,33 @@
 						</div>             
 					</div>           
 				</div>	
+				
+				
+				<!-- Modal Quantidade Pordutos -->
+				<div class="modal fade" id="confirmar_preco" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-preco">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Fechar</span></button>
+								<h4 class="modal-title" id="myModalLabel">Confirma esse preço?</h4>
+							</div>
+							<div class="modal-body">			
+								<form class="form-horizontal" role="form">				  
+										<label for="precoProduto" class="nome-produto-checkin">Preço do produto:
+											<input class="form-control" style="width: 92%;" placeholder="" id="precoProd" name="nome" value="" />
+										</label>
+										<div class="col-sm-10">
+										</div>
+								</form>		
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default" data-dismiss="modal">Confirmar</button>
+								<button type="button" class="btn btn-primary" data-dismiss="modal" onclick="editarPreco();">Editar Preço</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Modal final -->
 
 				<div class="modal fade" id="cadastrar_prduto_lista" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 					<div class="modal-dialog">
