--- a/googleMaps.html
+++ b/googleMaps.html
@@ -31,22 +31,12 @@
         <script>
 			$(document).on("pageinit","#paginaMapa", function(e,data){
 
-				var defaultPos = new google.maps.LatLng(-5.800782, -35.2155313);
-
-				if(navigator.geolocation){
-						function exito(pos){
-							MuestraMapa(new google.maps.LatLng(pos.coords.latitude, pos.coords.longitude));
-						}
-
-						function falla(error){
-							MuestraMapa(defaultPos);
-						}
-				var options = {maximumAge:500000, enableHighAccuracy:true, timeout: 5000}
-				navigator.geolocation.getCurrentPosition(exito, falla, options);
-				}
-				else{
+			var latitude = window.localStorage.latitude;
+			var longitude = window.localStorage.longitude;
+			
+				var defaultPos = new google.maps.LatLng(latitude,longitude);
+				
 					MuestraMapa(defaultPos);
-				}
 
 				function MuestraMapa(latlng){
 
