--- a/googleMaps.html
+++ b/googleMaps.html
@@ -21,7 +21,7 @@ function initialize() {
 		position: position,
 		map:map,
 		title:"hi posiction",
-		animation: google.maps.Animation.DROP
+		animation: google.maps.Animation.BOUNCE
 	});
 }
 google.maps.event.addDomListener(window, 'load', initialize);
