Ajustes do Cheeckin

--- a/principal.html
+++ b/principal.html
@@ -87,7 +87,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-6">           
 							<div class="panel panel-back noti-box">
 								<div>
-									<a onclick="controleCheckin('index')" ><img src="assets/img/checkin.png" width="60px" height="90px"></a>
+									<a href="checkinEstabelecimento.html" onclick="controleCheckin('index')" ><img src="assets/img/checkin.png" width="60px" height="90px"></a>
 								</div>
 									<p class="main-text">CheckIn</p>
 									<p class="text-muted">Realize seu checkin</p>
