--- a/visualizar-lista.html
+++ b/visualizar-lista.html
@@ -80,9 +80,9 @@
 							</button>
 					
 
-							<button type="button" class="btn btn-primary" style="float: right;" onclick="controleCheckin('lista')">
+							<a href="checkinEstabelecimento.html" type="button" class="btn btn-primary" style="float: right;" onclick="controleCheckin('lista')">
 								Checkin
-							</button>
+							</a>
 						
 							<button type="button" class="btn btn-primary" style="float: right;" onclick="mostrarPesquisa();">
 								Q
