--- a/checkinEstabelecimento.html
+++ b/checkinEstabelecimento.html
@@ -17,6 +17,7 @@
 		<!-- SCRIPTS DO COMUNICACAO WEB SERVICE -->
 		<script src="assets/js/WS/usuarioWS.js"></script> 
 		<script src="assets/js/WS/checkInWS.js"></script>	
+		<script src="assets/js/WS/listaWS.js"></script>	
 		<!-- FUNCOES PRE-REALIZADAS -->
 		<script type="text/javascript">
 			window.onload = function(){
@@ -50,7 +51,7 @@
 							<a href="estabelecimento.html"><img src="assets/img/estabelecimentoBranco.png" width="40px" style="margin-right: 15px;">Estabelecimentos</a>
 						</li>
 						<li>
-							<a  href="listas.html"><img src="assets/img/listaBranco.png" width="40px" style="margin-right: 15px;"> Listas</a>
+							<a  href="listas.html" onclick="zerarChekinEstabelecimento()"><img src="assets/img/listaBranco.png" width="40px" style="margin-right: 15px;"> Listas</a>
 						</li>
 						<li>
 							<a  href="produtos.html"><img src="assets/img/produtosBranco.png" width="40px" style="margin-right: 15px;"> Produtos</a>
