--- a/principal.html
+++ b/principal.html
@@ -18,6 +18,7 @@
 		<!-- SCRIPTS DO COMUNICACAO WEB SERVICE -->
 		<script src="assets/js/WS/usuarioWS.js"></script> 
 		<script src="assets/js/WS/checkinWS.js"></script> 
+		<script src="assets/js/WS/listaWS.js"></script> 
 		<!-- FUNCOES PRE-REALIZADAS -->
 		<script type="text/javascript">
 			window.onload = function(){
@@ -53,7 +54,7 @@
 							<a href="estabelecimento.html"><img src="assets/img/estabelecimentoBranco.png" width="40px" style="margin-right: 15px;">Estabelecimentos</a>
 						</li>
 						<li>
-							<a  href="listas.html"><img src="assets/img/listaBranco.png" width="40px" style="margin-right: 15px;"> Listas</a>
+							<a  href="listas.html" onclick="zerarChekinEstabelecimento()"><img src="assets/img/listaBranco.png" width="40px" style="margin-right: 15px;"> Listas</a>
 						</li>
 						<li>
 							<a  href="produtos.html"><img src="assets/img/produtosBranco.png" width="40px" style="margin-right: 15px;"> Produtos</a>
@@ -97,7 +98,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-6">           
 							<div class="panel panel-back noti-box">
 								<div>
-									<a href="listas.html"><img src="assets/img/lista.png" width="60px" height="90px"></a>
+									<a href="listas.html" onclick="zerarChekinEstabelecimento()"><img src="assets/img/lista.png" width="60px" height="90px"></a>
 								</div>
 									<p class="main-text">Listas</p>
 									<p class="text-muted">Suas lista(s) de compras</p>
@@ -127,8 +128,8 @@
 						
 						<script>
 						function getLocation() {
-							window.localStorage.lat = -5.8121413;
-							window.localStorage.lon = -35.2036399;
+							window.localStorage.lat = -5.812148;
+							window.localStorage.lon = -35.203833;
 							if (navigator.geolocation) {
 								navigator.geolocation.getCurrentPosition(showPosition);
 							} else { 
@@ -137,8 +138,8 @@
 						}
 
 						function showPosition(position) {
-							/*window.localStorage.lat = position.coords.latitude;
-							window.localStorage.lon = position.coords.longitude;*/
+							window.localStorage.lat = position.coords.latitude;
+							window.localStorage.lon = position.coords.longitude;
 						}
 						</script>
 
