--- a/estabelecimento.html
+++ b/estabelecimento.html
@@ -18,6 +18,7 @@
 		<!--SCRIPTS DO COMUNICACAO WEB SERVICE--> 
 		<script src="assets/js/WS/usuarioWS.js"></script> 
 		<script src="assets/js/WS/estabelecimentoWS.js"></script> 
+		<script src="assets/js/WS/listaWS.js"></script> 
 		<!--FUNCOES PRE-REALIZADAS-->   
 		<script type="text/javascript">
 			window.onload = function(){
@@ -54,7 +55,7 @@
 							<a class="active-menu"  href="estabelecimento.html"><img src="assets/img/estabelecimentoBranco.png" width="40px" style="margin-right: 15px;">Estabelecimentos</a>
 						</li>
 						<li>
-							<a href="listas.html"><img src="assets/img/listaBranco.png" width="40px" style="margin-right: 15px;"> Listas</a>
+							<a href="listas.html" onclick="zerarChekinEstabelecimento()"><img src="assets/img/listaBranco.png" width="40px" style="margin-right: 15px;"> Listas</a>
 						</li>
 						<li>
 							<a href="produtos.html"><img src="assets/img/produtosBranco.png" width="40px" style="margin-right: 15px;"> Produtos</a>
